# Semesterprojekte

./: .gitignore  CMakeLists.txt  FUNDING.yml  LICENSE  README  README.md  The_Blinking_LightHouse_3000.pptx  pom.xml  pubspec.yaml  requirements.txt
Report/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
Report/ns-1/: index.html  index_SORT_BY_BLOCK.html  index_SORT_BY_BLOCK_DESC.html  index_SORT_BY_CLASS.html  index_SORT_BY_CLASS_DESC.html  index_SORT_BY_LINE.html  index_SORT_BY_LINE_DESC.html  index_SORT_BY_METHOD.html  index_SORT_BY_METHOD_DESC.html  index_SORT_BY_NAME_DESC.html
android/app/: build.gradle  google-services.json
doc/: Documentation.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: crypto.dart  firebase.dart  main.dart
lib/processing-4.0b8/: changes.md
src/: CMakeLists.txt  Graphical.py  Log.py  Robot.py  Warehouse.cpp  Warehouse.h  cocktails.db  main.cpp  main.hpp  main.py  modes.py  test.py
src/ConveyorBelt/: CMakeLists.txt  ConveyorBelt.cpp  ConveyorBelt.h  ConveyorBeltRetrieve.cpp  ConveyorBeltRetrieve.h  ConveyorBeltStore.cpp  ConveyorBeltStore.h  IPoint.cpp  IPoint.h  KPoint.cpp  KPoint.h  TransferPoint.cpp  TransferPoint.h
src/Inventory/: CMakeLists.txt  ContainerUse.cpp  Inventory.cpp  Inventory.h  Segment.cpp  Segment.h  SegmentUse.h  Shelf.cpp  Shelf.h  ShelfPair.cpp  ShelfPair.h
src/Item/: CMakeLists.txt  Container.cpp  Container.h  Item.cpp  Item.h  Priority.cpp  Priority.h  Timer.cpp  Timer.h
src/Messages/: CMakeLists.txt  SegmentDataMessage.cpp  SegmentDataMessage.h  TimeSegmentMessage.cpp  TimeSegmentMessage.h  (+2 more)
(+817 files in other folders)
